fix(ControlLabel): allow control text to be stretched (#619)

--- a/src/components/ControlLabel/ControlLabel.scss
+++ b/src/components/ControlLabel/ControlLabel.scss
@@ -27,7 +27,12 @@ $block: '.#{variables.$ns}control-label';
         line-height: 18px;
     }
 
+    &__indicator {
+        flex-shrink: 0;
+    }
+
     &__text {
+        flex-grow: 1;
         white-space: normal;
 
         #{$block}_disabled & {
